--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 psycopg2-binary==2.9.5
 pycodestyle==2.9.1
+python-dotenv==0.21.0
 requests==2.28.1
 tomli==2.0.1
 urllib3==1.26.12
